--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <script>window.__theme = 'bs4';</script>
+
+
 </head>
 
 <body>
