--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
   <!-- <link rel="stylesheet" type="text/css" href="../node_modules/primeng/resources/themes/nova-light/theme.css" />
   <link rel="stylesheet" type="text/css" href="../node_modules/primeng/resources/primeng.min.css" /> -->
 
+  <link
+    href="https://fonts.googleapis.com/css?family=Bungee|Heebo:900|Jaldi:700|Montserrat:900|Signika:700&display=swap"
+    rel="stylesheet">
+
   <script>window.__theme = 'bs4';</script>
 
 
